--- a/index15.html
+++ b/index15.html
@@ -62,7 +62,7 @@
 			<img src="img/desk3.gif">
 			<img src="img/desk4.gif">
 			<img src="img/desk6.png">
-			<img src="img/desk7.png">
+			<img src="img/desk7.gif">
 			<img src="img/desk8.gif">
 			<img src="img/desk9.png">
 			<img src="img/desk10.gif">
